# vscode-notebook

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: config.py
app/core/chrome_webdriver/: __init__.py  chrome_webdriver.py  chromedriver_installer.py
app/core/webdriver_tools/: __init__.py  webdriver_tools.py
data/: historia_inedita.md
files/: page.html
notebooks/: emulatorjs.ipynb  langchain_ollama.ipynb  manga_livre.ipynb  mangalivre.ipynb  medium.ipynb  nfe_tools.ipynb  nlp_imobiliario.ipynb  ollama_v202412.ipynb  openai.ipynb  video_streaming.ipynb  winregedit.ipynb  youtube.ipynb
notebooks/ia/: deepseek_v20250202.ipynb  ollama_rag.ipynb
scripts/: poetry.py
vscode_notebook/: youtube.ipynb
