[tool.poetry]
name = "app"
version = "1.0.0"
description = "Projeto de Jupyter Notebook configurado no VSCode"
authors = ["douglaspands"]
readme = "README.md"
repository = "https://github.com/douglaspands/vscode-notebook"

[tool.poetry.dependencies]
python = "^3.11"
selenium-wire = "^5.1.0"
pydash = "^5.1.2"
requests = "^2.28.1"
pytube = "^12.1.2"
ipykernel = "^6.20.0"
beautifulsoup4 = "^4.11.1"
ffmpeg-python = "^0.2.0"
pyee = "^9.0.4"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
spacy = "^3.5.3"
pyspellchecker = "^0.7.2"
m3u8 = "^3.6.0"
tqdm = "^4.66.1"
pandas = "^2.2.1"
aiohttp = "^3.9.3"
pillow = "^10.2.0"

langchain-ollama = "^0.2.0"
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.11.4"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
makerequirements = "scripts.poetry:run_makerequirements"
format = "scripts.poetry:run_format"
pycacheremove = "scripts.poetry:run_pycache_remove"
