[project]
name = "vscode-notebook"
version = "1.1.0"
description = "Projeto de Jupyter Notebook configurado no VSCode"
authors = [{ name = "Douglas Panhota", email = "douglaspands@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydash (>=8.0.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "pyee (>=12.1.1,<13.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyspellchecker (>=0.8.2,<0.9.0)",
    "m3u8 (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ "include" = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[tool.poetry.group.ollama.dependencies]
ollama = "^0.4.7"
langchain-ollama = "^0.3.0"

[tool.poetry.scripts]
makerequirements = "scripts.poetry:run_makerequirements"
format = "scripts.poetry:run_format"
pycacheremove = "scripts.poetry:run_pycache_remove"
